Add live metrics api
